--- a/test/deform/grid_curve.html
+++ b/test/deform/grid_curve.html
@@ -7,6 +7,7 @@
 import Starter, { THREE }           from '../_lib/Starter.js';
 import Util                         from '../_lib/Util.js';
 import Grid                         from '../../src/primitives/Grid';
+import Cylindrify                   from '../../src/deform/Cylindrify';
 //#endregion
 
 //#region MAIN
@@ -16,29 +17,30 @@ let Ref     = {};
 
 window.addEventListener( "load", async _=>{
     App = new Starter( { webgl2:true, grid:true } );
-    App.setCamera( 0, 60, 4, [0,0.0,0] );
+    App.setCamera( 0, 20, 4, [0,0.0,0] );
 
     //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    const sGeoA = Grid.get( 1, 1, 3, 3, true );
-    const sGeoB = Grid.getAlt( 1, 1, 3, 3, true );
-    const sGeoC = Grid.get( 1, 1, 3, 3, true, true );
+    const sGeoA = Grid.get( 2, 1, 6, 1, true, true );
+    
+    const deform = new Cylindrify();
+    deform.apply( sGeoA.vertices );
 
     const gridA = Util.mesh( sGeoA.vertices, sGeoA.indices, sGeoA.normals, null, null, true );
-    const gridB = Util.mesh( sGeoB.vertices, sGeoB.indices, sGeoB.normals, null, null, true );
-    const gridC = Util.mesh( sGeoC.vertices, sGeoC.indices, sGeoC.normals, null, null, true );
 
-    gridA.position.fromArray( [-1, 0.1, 0 ] );
-    gridB.position.fromArray( [1, 0.1, 0 ] );
-    gridC.position.fromArray( [0, 0, -1 ] );
+    //gridA.position.fromArray( [-1, 0.1, 0 ] );
     
     App.add( gridA );
-    App.add( gridB );
-    App.add( gridC );
   
     //~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     App.render();
 });
 //#endregion
+
+function deform_cylinder( verts ){
+
+    new_position = character_position - vec3(0,radius,0) + Rx * vec3(0,radius+_old_position.y,0)
+
+}
 
 </script>
 </body></html>
